objects/Order_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Copy_Total_Price__c</fullName>
        <label>Copy Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer_s_Order__c</fullName>
        <label>Customer&apos;s Order</label>
        <referenceTo>Customer_s_Order__c</referenceTo>
        <relationshipLabel>Order Details</relationshipLabel>
        <relationshipName>Order_Details</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Selling_Product__c</fullName>
        <label>Selling Product</label>
        <referenceTo>Selling_Product__c</referenceTo>
        <relationshipLabel>Order Details</relationshipLabel>
        <relationshipName>Order_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Total_Price__c</fullName>
        <description>Sum of the same product prices in respect of their quantity</description>
        <formula>Quantity__c *  Selling_Product__r.Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Order Detail</label>
    <nameField>
        <displayFormat>OD# {00000000}</displayFormat>
        <label>Order Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>